# lxdock

./: .codecov.yml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  Vagrantfile  requirements-dev.txt  requirements-tests.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
docs/: Makefile  cli.rst  conf.py  conf.rst  contributing.rst  credits.rst  getting_started.rst  glossary.rst  index.rst  thanks.rst
docs/_static/: custom_theme.css
docs/_templates/: indexcontent.html
docs/cli/: config.rst  destroy.rst  halt.rst  help.rst  index.rst  init.rst  provision.rst  shell.rst  status.rst  up.rst
docs/conf/: index.rst
docs/provisioners/: ansible.rst  index.rst  puppet.rst  shell.rst
docs/release_notes/: index.rst  v0.1.1.rst  v0.1.rst  v0.2.1.rst  v0.2.rst  v0.3.rst  v0.4.1.rst  v0.4.rst
docs/usage/: index.rst  multiple_containers.rst  provisioning.rst  shared_folders.rst
docs/user/: install.rst
lxdock/: __init__.py  client.py  constants.py  container.py  exceptions.py  logging.py  network.py  project.py
lxdock/cli/: constants.py  exceptions.py  main.py  project.py  utils.py
lxdock/conf/: config.py  constants.py  exceptions.py  interpolation.py  schema.py  validators.py
nomad/: action.py  client.py  config.py  constants.py  container.py  exceptions.py  logging.py  network.py  project.py  provision.py  util.py
scripts/: ci-base-setup.sh  vagrant-base-setup.sh
tests/: conftest.py
vith/: __init__.py  action.py  network.py  provision.py  util.py
(+89 files in other folders)
