[coverage:report]
exclude_lines =
    pragma: no cover
    def __str__
    def __repr__
    raise NotImplementedError

[flake8]
exclude = build,docs,.tox
max-line-length = 100

[isort]
default_section = THIRDPARTY
line_length=100
known_first_party = lxdock
not_skip = __init__.py

[tool:pytest]
confcutdir = ./tests/
norecursedirs = build .tox

[metadata]
license-file = LICENSE
